dodanie punktu - 2 opcje (sensor i manual)

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,13 +15,19 @@
     
     <string name="no_selected_item_info">Brak zaznaczonej kalibracji!</string>
     
-    <string name="insert_dialog_title">Wpisz nazwę nowej kalibracji:</string>
+    <string name="insert_calibration_dialog_title">Wpisz nazwę nowej kalibracji:</string>
+    <string name="insert_point_dialog_title">Wprowadź nowy punkt:</string>
     <string name="positive_btn">OK</string>
     <string name="negative_btn">Cancel</string>
     <string name="delete_dialog_text">Czy na pewno usunąć?</string>
 
-    <string name="insert">Dodaj</string>
-    <string name="delete">Usuń</string>
-    <string name="edit">Edytuj</string>
+    <string name="insert_calibration">Dodaj kalibrację</string>
+    <string name="delete_calibration">Usuń kalibrację</string>
+    <string name="edit_calibration">Edytuj kalibrację</string>
+    <string name="insert_point">Dodaj punkt</string>
+    <string name="delete_point">Usuń punkt</string>
+    <string name="edit_point">Edytuj punkt</string>
     
+    <string name="before">Odczyt: </string>
+    <string name="after">Kalibracja: </string>
 </resources>
